--- a/hello.html
+++ b/hello.html
@@ -1,21 +1,18 @@
 <!DOCTYPE html>
-<html lang="fr"> 
-    <head>
-        <meta charset="utf-8">
-        <title>Formation GIT</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-		
-		<link rel="stylesheet" href="style.css">
+<html lang="fr">
 
-	</head>
-	
+<head>
+	<meta charset="utf-8">
+	<title>Formation GIT</title>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+	<link rel="stylesheet" href="style.css">
+</head>
 
-	<body>
+<body>
+	<!-- TITRE -->
+	<div id="top-banner">
+		Bienvenue dans cette formation GIT !
+	</div>
+</body>
 
-		<!-- TITRE -->
-		<div>
-			Bienvenue dans cette formation GIT !
-		</div>
-		
-	</body>
 </html>
