Ajout d'un paragraphe descriptif

--- a/hello.html
+++ b/hello.html
@@ -13,6 +13,10 @@
 	<div id="top-banner">
 		Bienvenue dans cette formation GIT !
 	</div>
+
+	<div id="desc">
+		<p>Je suis un jeune codeur <em>JS frontend</em> de 46 ans (;-)) qui apprend le <strong>git</strong>.</p>
+	</div>
 </body>
 
 </html>
