--- a/hello.html
+++ b/hello.html
@@ -14,8 +14,20 @@
 		Bienvenue dans cette formation GIT !
 	</div>
 
+	<!-- Description -->
 	<div id="desc">
+		<h1>Ma description</h1>
 		<p>Je suis un jeune codeur <em>JS frontend</em> de 46 ans (;-)) qui apprend le <strong>git</strong>.</p>
+	</div>
+
+	<!-- Récompense -->
+	<div id="reward">
+		<h1>Mes récompenses</h1>
+		<p>
+			<em>
+				en construction
+			</em>
+		</p>
 	</div>
 </body>
 
