#2: Ajout des images dans le dossier et le site

--- a/hello.html
+++ b/hello.html
@@ -24,9 +24,7 @@
 	<div id="reward">
 		<h1>Mes récompenses</h1>
 		<p>
-			<em>
-				en construction
-			</em>
+			<img src="images/medal_bronze.png" alt="médaille de bronze">
 		</p>
 	</div>
 
