--- a/hello.html
+++ b/hello.html
@@ -25,6 +25,7 @@
 		<h1>Mes récompenses</h1>
 		<p>
 			<img src="images/medal_bronze.png" alt="médaille de bronze">
+			<img src="images/medal_silver.png" alt="médaille d'argent">
 		</p>
 	</div>
 
