Ajout de la commande git pull

--- a/hello.html
+++ b/hello.html
@@ -29,13 +29,20 @@
 		</p>
 	</div>
 
-	
 	<!-- GIST -->
 	<div id="gist">
 		<h1>Mon Gist</h1>
 		<p>
 			<script src="https://gist.github.com/Fabezio/ca65b08aaa5ad62d28720137e2c54adb.js"></script>
 		</p>
+	</div>
+
+	<!-- Commandes Git -->
+	<div id="git-controls">
+		<h1>Mes commandes Git</h1>
+		<ul>
+			<li>git pull</li>
+		</ul>
 	</div>
 
 
