Ajout médaille d'or

--- a/hello.html
+++ b/hello.html
@@ -26,6 +26,7 @@
 		<p>
 			<img src="images/medal_bronze.png" alt="médaille de bronze">
 			<img src="images/medal_silver.png" alt="médaille d'argent">
+			<img src="images/medal_gold.png" alt="médaille d'argent">
 		</p>
 	</div>
 
