--- a/hello.html
+++ b/hello.html
@@ -1,57 +1,45 @@
 <!DOCTYPE html>
 <html lang="fr">
-
 <head>
-	<meta charset="utf-8">
-	<title>Formation GIT</title>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<link rel="stylesheet" href="style.css">
+    <meta charset="utf-8">
+    <title>Formation GIT</title>
+    <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
+    <link href="style.css" rel="stylesheet">
 </head>
-
 <body>
-	<!-- TITRE -->
-	<div id="top-banner">
-		Bienvenue dans cette formation GIT !
-	</div>
+    <!-- TITRE -->
+    <div id="top-banner">
+        Bienvenue dans cette formation GIT !
+		</div>
 
-	<!-- Description -->
-	<div id="desc">
-		<h1>Ma description</h1>
-		<p>Je suis un jeune codeur <em>JS frontend</em> de 46 ans (;-)) qui apprend le <strong>git</strong>.</p>
-	</div>
-
-	<!-- Récompense -->
-	<div id="reward">
-		<h1>Mes récompenses</h1>
-		<p>
-			<img src="images/medal_bronze.png" alt="médaille de bronze">
-			<img src="images/medal_silver.png" alt="médaille d'argent">
-			<img src="images/medal_gold.png" alt="médaille d'argent">
-		</p>
-	</div>
-
-	<!-- GIST -->
-	<div id="gist">
-		<h1>Mon Gist</h1>
-		<p>
-			<script src="https://gist.github.com/Fabezio/ca65b08aaa5ad62d28720137e2c54adb.js"></script>
-		</p>
-	</div>
-
-	<!-- Commandes Git -->
-	<div id="git-controls">
-		<h1>Mes commandes Git</h1>
-		<ul>
-			<li>git pull</li>
-			<li>git push</li>
-			<li>git log</li>
-		</ul>
-	</div>
-
-
-
-	
-
+		<!-- Description -->
+    <div id="desc">
+        <h1>Ma description</h1>
+        <p>Je suis un jeune codeur <em>JS frontend</em> de 46 ans (;-)) qui apprend le <strong>git</strong>.</p>
+		</div>
+		
+		<!-- Récompense -->
+    <div id="reward">
+        <h1>Mes récompenses</h1>
+        <p><img alt="médaille de bronze" src="images/medal_bronze.png"> <img alt="médaille d'argent" src="images/medal_silver.png"> <img alt="médaille d'argent" src="images/medal_gold.png"></p>
+		</div>
+		
+		<!-- GIST -->
+    <div id="gist">
+        <h1>Mon Gist</h1>
+        <p>
+        <script src="https://gist.github.com/Fabezio/ca65b08aaa5ad62d28720137e2c54adb.js">
+        </script></p>
+		</div>
+		
+		<!-- Commandes Git -->
+    <div id="git-controls">
+        <h1>Mes commandes Git</h1>
+        <ul>
+            <li>git pull</li>
+            <li>git push</li>
+            <li>git log</li>
+        </ul>
+    </div>
 </body>
-
 </html>
